--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,7 +52,7 @@
 
                             <div>
                                 <p class="mb-0">Don't have an account? <a class="text-white-50 fw-bold nav-link"
-                                                                          href="/api/singup">Sign Up</a>
+                                                                          href="/singup">Sign Up</a>
                                 </p>
                             </div>
 
