--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
     <span class="input-group-text">chat</span>
     <span class="input-group-text" id="chat-name-value">id</span>
 </div>
-<form id="messageForm" class="custom-form" action="#" th:action="@{/saveMessage}" th:object="${message}" method="post">
+<form id="messageForm" class="custom-form" action="#" method="post">
     <div class="container">
         <div class="row">
             <div class="col-md-1 custom-background-user">
@@ -86,11 +86,11 @@
             <div class="col-md-1 custom-background-user">
             </div>
             <div class="col-md-1 custom-background">
-                <input type="text" id="message-user" th:value="${usermessage}" class="custom-input_message-user"
+                <input type="text" id="message-user" class="custom-input_message-user"
                        readonly/>
             </div>
             <div class="col-md-5 custom-background">
-                <input type="text" id="message-message" th:field="*{message}" class="custom-input_message-width"/>
+                <input type="text" id="message-message" class="custom-input_message-width"/>
             </div>
             <div class="col-md-1 custom-background">
                 <input type="submit" value="Send Message" id="button_send_message"/>
