--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
 <head>
     <title>Thymeleaf Chat</title>
     <link rel="stylesheet" th:href="@{/css/login.css}">
-    <script src="/js/scripts.js"></script>
-    <script src="/js/singin.js"></script>
+    <script src="/chat/js/scripts.js"></script>
+    <script src="/chat/js/singin.js"></script>
 </head>
 <body>
 <section class="vh-100 gradient-custom">
@@ -52,7 +52,7 @@
 
                             <div>
                                 <p class="mb-0">Don't have an account? <a class="text-white-50 fw-bold nav-link"
-                                                                          href="/singup">Sign Up</a>
+                                                                          href="singup">Sign Up</a>
                                 </p>
                             </div>
 
