--- a/src/main/resources/templates/singup.html
+++ b/src/main/resources/templates/singup.html
@@ -8,7 +8,7 @@
 <head>
     <title>Thymeleaf Chat</title>
     <link rel="stylesheet" th:href="@{/css/singup.css}">
-    <script src="/js/singup.js"></script>
+    <script src="/chat/js/singup.js"></script>
 </head>
 <body>
 <section class="vh-100 bg-image"
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="d-flex justify-content-center">
                                     <label class="form-check-label text-center text-white">Have already an account? <a
-                                            href="/login"
+                                            href="login"
                                             class="fw-bold text-body"><u class="text-blue">Login here</u></a></label>
                                 </div>
                             </form>
