add CardController add card.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <head>
     <title>Thymeleaf Chat</title>
     <link rel="stylesheet" th:href="@{/css/login.css}">
-    <script src="/chat/js/scripts.js"></script>
+    <!--<script src="/chat/js/scripts.js"></script> -->
     <script src="/chat/js/singin.js"></script>
 </head>
 <body>
