--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,7 +10,6 @@
             crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <script src="/chat/js/profile.js"></script> -->
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <script src="/chat/js/scripts.js"></script>
 </head>
@@ -51,13 +50,13 @@
                             <div class="col-lg-3 border-end">
                                 <div class="p-4">
                                     <div class="nav flex-column nav-pills">
-                                        <a class="nav-link active" href="#"><i class="fas fa-user me-2"></i>Personal
+                                        <a class="nav-link active" href="#" id="profile-info"><i class="fas fa-user me-2"></i>Personal
                                             Info</a>
-                                        <a class="nav-link" href="#"><i class="fas fa-lock me-2"></i>Security</a>
-                                        <a class="nav-link" href="#"><i class="fas fa-bell me-2"></i>Notifications</a>
-                                        <a class="nav-link" href="#"><i class="fas fa-credit-card me-2"></i>Billing</a>
+                                        <a class="nav-link" href="#" id="profile-security"><i class="fas fa-lock me-2"></i>Security</a>
+                                        <a class="nav-link" href="#" id="profile-notification"><i class="fas fa-bell me-2"></i>Notifications</a>
+                                        <a class="nav-link" href="#" id="profile-billing"><i class="fas fa-credit-card me-2"></i>Billing</a>
                                         <a class="nav-link" href="#" id="edit-profile" ><i class="fas fa-user me-2"></i>Edit</a>
-                                        <a class="nav-link" href="#"><i class="fas fa-chart-line me-2"></i>Activity</a>
+                                        <a class="nav-link" href="#" id="profile-activity"><i class="fas fa-chart-line me-2"></i>Activity</a>
                                     </div>
                                 </div>
                             </div>
