--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -120,7 +120,7 @@
                             </div>
                         </div>
 
-                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">
+                        <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit" id="checkoutFormButton">
                             Continue to checkout
                         </button>
                     </form>
