--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-
+<!--
         <div class="col-md-4 mb-4">
             <div class="card mb-4">
                 <div class="card-header py-3">
@@ -155,7 +155,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </section>
 <!-- Credit card form -->
