--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -33,7 +33,7 @@
                         </button>
                     </div>
                     <h3 class="mt-3 mb-1" id="profile-user-name"></h3>
-                    <p class="text-muted mb-3" id="profile-position">Senior Product Designer</p>
+                    <p class="text-muted mb-3" id="profile-position"></p>
                     <div class="d-flex justify-content-center gap-2 mb-4">
                         <button class="btn btn-outline-primary" id="profile-message"><i class="fas fa-envelope me-2"></i>Message</button>
                         <button class="btn btn-primary" id="profile-connect"><i class="fas fa-user-plus me-2"></i>Connect</button>
@@ -56,6 +56,7 @@
                                         <a class="nav-link" href="#" id="profile-notification"><i class="fas fa-bell me-2"></i>Notifications</a>
                                         <a class="nav-link" href="#" id="profile-billing"><i class="fas fa-credit-card me-2"></i>Billing</a>
                                         <a class="nav-link" href="#" id="edit-profile" ><i class="fas fa-user me-2"></i>Edit</a>
+                                        <a class="nav-link" href="#" id="profile-edit-view"><i class="fas fa-chart-line me-2"></i>Edit bio</a>
                                         <a class="nav-link" href="#" id="profile-activity"><i class="fas fa-chart-line me-2"></i>Activity</a>
                                     </div>
                                 </div>
