--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -116,7 +116,7 @@
                                                                 security</p>
                                                         </div>
                                                         <div class="form-check form-switch">
-                                                            <input class="form-check-input" type="checkbox" checked>
+                                                            <input class="form-check-input" type="checkbox" id="formTwoFactors" checked>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -132,7 +132,7 @@
                                                             </p>
                                                         </div>
                                                         <div class="form-check form-switch">
-                                                            <input class="form-check-input" type="checkbox" checked>
+                                                            <input class="form-check-input" type="checkbox" id="formEmailNotification" checked>
                                                         </div>
                                                     </div>
                                                 </div>
