--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
 
                                 <button data-mdb-button-init data-mdb-ripple-init
                                         class="btn btn-outline-light btn-lg px-5"
-                                        type="submit">Login
+                                        type="submit" id="loginButton">Login
                                 </button>
 
                                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
