add SearchController, add SearchService add searchchat.html add searchuser.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,7 @@
 <script>
     createNavbar();
 </script>
-
-<div id="panel">
-</div>
+<div id="modal-container"></div>
+<div id="panel"></div>
 </body>
 </html>
