--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -12,16 +12,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/css/chat.css}">
     <script src="/chat/js/scripts.js"></script>
 
 </head>
-<form class="d-flex" role="chat">
-    <div class="input-group mb-3 custom-background-chat">
-        <input type="text" class="form-control" placeholder="Create chat" aria-label="Create chat"
-               aria-describedby="button-custom-chat-create" id="chat-name">
-        <button class="btn btn-outline-secondary" type="button" id="button-custom-chat-create">Add</button>
+
+
+<div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Chat's name" aria-label="Chat's name" aria-describedby="basic-addon2" id="chat-name">
+    <div class="input-group-append">
+        <button class="btn btn-outline-secondary" type="button" id="button-add-chat">Add</button>
     </div>
-</form>
+</div>
+
+
 
 <div class="input-group mb-3 custom-background-chat-title">
     <span class="input-group-text">chat</span>
@@ -31,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-1 custom-background-user">
-                <div class="card card-header">Users</div>
+                <div class="card card-header" id="users-card">Users</div>
                 <ul class="list-group list-group-flush">
                 </ul>
             </div>
