--- a/src/main/resources/templates/search/searchchat.html
+++ b/src/main/resources/templates/search/searchchat.html
@@ -5,7 +5,10 @@
         crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+<head>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <script src="/chat/js/scripts.js"></script>
+</head>
 <div id="modal-container">
     <div class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -25,6 +28,7 @@
                 </div>
                 <div id="search-chat-results" class="modal-body">
                 </div>
+                <div id="pagination-container"></div>
             </div>
         </div>
     </div>
