--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -19,18 +19,240 @@
 
 
 <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Chat's name" aria-label="Chat's name" aria-describedby="basic-addon2" id="chat-name">
+    <input type="text" class="form-control" placeholder="Chat's name" aria-label="Chat's name"
+           aria-describedby="basic-addon2" id="chat-name">
     <div class="input-group-append">
         <button class="btn btn-outline-secondary" type="button" id="button-add-chat">Add</button>
     </div>
 </div>
 
+<div class="container mt-5">
+    <a class="btn btn-info btn-lg w-100" data-bs-toggle="collapse" href="#collapseExample"
+       role="button" aria-expanded="false" aria-controls="collapseExample">
+        <div class="d-flex justify-content-between align-items-center">
+            <span class="input-group-text" id="chat-name-value" style="justify-content: flex-start;">id</span>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </a>
+
+    <div class="collapse mt-3" id="collapseExample">
+        <section>
+            <div class="container py-5">
+
+                <div class="row">
+
+                    <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0">
+
+                        <h5 class="font-weight-bold mb-3 text-center text-lg-start">Member</h5>
+
+                        <div class="card">
+                            <div class="card-body" style="max-height: 600px; overflow-y: auto;">
+
+                                <ul class="list-unstyled mb-0" id="users-list">
+                                    <li class="p-2 border-bottom bg-body-tertiary">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-8.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">John Doe</p>
+                                                    <p class="small text-muted">Hello, Are you there?</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">Just now</p>
+                                                <span class="badge bg-danger float-end">1</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="p-2 border-bottom">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-1.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">Danny Smith</p>
+                                                    <p class="small text-muted">Lorem ipsum dolor sit.</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">5 mins ago</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="p-2 border-bottom">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-2.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">Alex Steward</p>
+                                                    <p class="small text-muted">Lorem ipsum dolor sit.</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">Yesterday</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="p-2 border-bottom">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-3.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">Ashley Olsen</p>
+                                                    <p class="small text-muted">Lorem ipsum dolor sit.</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">Yesterday</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="p-2 border-bottom">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-4.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">Kate Moss</p>
+                                                    <p class="small text-muted">Lorem ipsum dolor sit.</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">Yesterday</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="p-2 border-bottom">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-5.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">Lara Croft</p>
+                                                    <p class="small text-muted">Lorem ipsum dolor sit.</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">Yesterday</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="p-2">
+                                        <a href="#!" class="d-flex justify-content-between">
+                                            <div class="d-flex flex-row">
+                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp"
+                                                     alt="avatar"
+                                                     class="rounded-circle d-flex align-self-center me-3 shadow-1-strong"
+                                                     width="60">
+                                                <div class="pt-1">
+                                                    <p class="fw-bold mb-0">Brad Pitt</p>
+                                                    <p class="small text-muted">Lorem ipsum dolor sit.</p>
+                                                </div>
+                                            </div>
+                                            <div class="pt-1">
+                                                <p class="small text-muted mb-1">5 mins ago</p>
+                                                <span class="text-muted float-end"><i class="fas fa-check"
+                                                                                      aria-hidden="true"></i></span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6 col-lg-7 col-xl-8">
+
+                        <ul class="list-unstyled" id="messages-list">
+                            <li class="d-flex justify-content-between mb-4">
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp" alt="avatar"
+                                     class="rounded-circle d-flex align-self-start me-3 shadow-1-strong" width="60">
+                                <div class="card">
+                                    <div class="card-header d-flex justify-content-between p-3">
+                                        <p class="fw-bold mb-0">Brad Pitt</p>
+                                        <p class="text-muted small mb-0"><i class="far fa-clock"></i> 12 mins ago</p>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="mb-0">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut
+                                            labore et dolore magna aliqua.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="d-flex justify-content-between mb-4">
+                                <div class="card w-100">
+                                    <div class="card-header d-flex justify-content-between p-3">
+                                        <p class="fw-bold mb-0">Lara Croft</p>
+                                        <p class="text-muted small mb-0"><i class="far fa-clock"></i> 13 mins ago</p>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="mb-0">
+                                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                                            doloremque
+                                            laudantium.
+                                        </p>
+                                    </div>
+                                </div>
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-5.webp" alt="avatar"
+                                     class="rounded-circle d-flex align-self-start ms-3 shadow-1-strong" width="60">
+                            </li>
+                            <li class="d-flex justify-content-between mb-4">
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp" alt="avatar"
+                                     class="rounded-circle d-flex align-self-start me-3 shadow-1-strong" width="60">
+                                <div class="card">
+                                    <div class="card-header d-flex justify-content-between p-3">
+                                        <p class="fw-bold mb-0">Brad Pitt</p>
+                                        <p class="text-muted small mb-0"><i class="far fa-clock"></i> 10 mins ago</p>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="mb-0">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut
+                                            labore et dolore magna aliqua.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                            <div class="bg-white mb-3">
+                                <div data-mdb-input-init class="form-outline">
+                                    <textarea class="form-control bg-body-tertiary"
+                                              rows="4" id="message-message"></textarea>
+                                    <label class="form-label" for="message-message">Message</label>
+                                </div>
+                            </div>
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init
+                                    class="btn btn-info btn-rounded float-end" id="button_send_message">Send
+                            </button>
 
 
-<div class="input-group mb-3 custom-background-chat-title">
-    <span class="input-group-text">chat</span>
-    <span class="input-group-text" id="chat-name-value">id</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
+<!--
+
 <form id="messageForm" class="custom-form">
     <div class="container">
         <div class="row">
@@ -57,14 +279,15 @@
                 <input type="text" id="message-user" class="custom-input_message-user" readonly/>
             </div>
             <div class="col-md-5 custom-background">
-                <input type="text" id="message-message" class="custom-input_message-width"/>
+                <input type="text" class="custom-input_message-width"/>
             </div>
             <div class="col-md-1 custom-background">
-                <input type="submit" value="Send Message" id="button_send_message"/>
+                <input type="submit" value="Send Message"/>
             </div>
         </div>
     </div>
 </form>
+-->
 
 
 <div class="modal" tabindex="-1" id="messageModal">
