add message.html modal

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -172,6 +172,8 @@
     </div>
 </div>
 
+<div id="modal-container"></div>
+
 <div class="modal fade" tabindex="-1" id="imageModal">
     <div class="modal-dialog">
         <div class="modal-content">
