--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<!-- Include MDBootstrap CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css" rel="stylesheet">
+
+<!-- Include MDBootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js"></script>
 <head>
     <title>Thymeleaf Chat</title>
     <link rel="stylesheet" th:href="@{/css/profile.css}">
-    <!-- <script src="/chat/js/scripts.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/chat.css}">
     <script src="/chat/js/scripts.js"></script>
@@ -20,9 +19,9 @@
 
 <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Chat's name" aria-label="Chat's name"
-           aria-describedby="basic-addon2" id="chat-name">
+           aria-describedby="basic-addon2" id="chat-name" data-mdb-input-init>
     <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="button-add-chat">Add</button>
+        <button class="btn btn-outline-secondary" type="button" id="button-add-chat" data-mdb-ripple-init>Add</button>
     </div>
 </div>
 
