--- a/src/main/resources/templates/profile/message.html
+++ b/src/main/resources/templates/profile/message.html
@@ -1,9 +1,11 @@
 <!-- Include MDBootstrap CSS -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css" rel="stylesheet">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.css">
 <!-- Include MDBootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js"></script>
 
+<script src="/chat/js/scripts.js"></script>
 
 <!--<div id="modal-container">-->
     <!-- Modal -->
