--- a/src/main/resources/templates/search/searchchat.html
+++ b/src/main/resources/templates/search/searchchat.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<head>
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <script src="/chat/js/scripts.js"></script>
-</head>
-<div id="modal-container">
+<!-- Include MDBootstrap CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.css">
+<!-- Include MDBootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js"></script>
+
+<script src="/chat/js/scripts.js"></script>
+<!--<div id="modal-container">-->
     <div class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -21,9 +18,9 @@
                     <div class="input-group rounded">
                         <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
                                aria-describedby="search-addon" id="search-chat-input"/>
-                        <span class="input-group-text border-0" id="search-addon">
-                            <i class="fas fa-search" id="search-chat-button"></i>
-                        </span>
+                        <button type="button" class="btn btn-info" data-mdb-ripple-init id="search-chat-button">
+                            <i class="fas fa-search"></i>Search
+                        </button>
                     </div>
                 </div>
                 <div id="search-chat-results" class="modal-body">
@@ -32,4 +29,5 @@
             </div>
         </div>
     </div>
-</div>
+<!--
+</div>-->
